# mcp-forge

./: README.md  docker-compose.yml  gitignore  petstore.yaml  pyproject.toml
saas/: .env.example  Dockerfile  Dockerfile.nginx  README.md  docker-compose.yml  nginx.conf  requirements.txt
saas/api/: config.py  main.py  models.py
saas/api/email_service/: sender.py
saas/api/jobs/: processor.py  queue.py
saas/api/routes/: download.py  generate.py  status.py
saas/api/security/: tokens.py  validators.py
saas/api/storage/: local.py
saas/frontend/: index.html
src/mcp_forge_generator/: __init__.py  analyzer.py  cli.py  generator.py  openapi_loader.py  renderer.py  spec_ir.py
src/mcp_forge_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_generation.py
